[package]
name = "wikigraph"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = "0.4.3"
clap = { version = "4.0.9", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
flume = { version = "0.10.14", default-features = false }
indicatif = "0.17.1"
once_cell = "1.15.0"
quick-xml = "0.25.0"
regex = "1.6.0"
rusqlite = { version = "0.28.0", features = ["bundled", "backup"] }
