[package]
name = "wikigraph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bzip2 = "0.4.4"
clap = { version = "4.4.8", features = ["derive"] }
once_cell = "1.18.0"
quick-xml = "0.31.0"
regex = "1.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints]
clippy.pedantic = "warn"
clippy.use_self = "warn"
